Fix gap between navbar and dropdown by adding negative margin

--- a/givefood/static/css/admin.css
+++ b/givefood/static/css/admin.css
@@ -15,6 +15,7 @@
 }
 .navbar-dropdown {
   border-top:0;
+  margin-top:-1px;
 }
 .main {
   padding:0 10px;
